--- a/MonoGame.Framework/MonoGame.Framework.NETMF.csproj
+++ b/MonoGame.Framework/MonoGame.Framework.NETMF.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Graphics\Viewport.cs" />
     <Compile Include="MathHelper.cs" />
     <Compile Include="Matrix.cs" />
+    <Compile Include="NETMF\Stopwatch.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
