--- a/MonoGame.Framework/MonoGame.Framework.NETMF.csproj
+++ b/MonoGame.Framework/MonoGame.Framework.NETMF.csproj
@@ -19,6 +19,7 @@
     <DefineConstants>DEBUG;TRACE;AGENT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
